# embedded_linux_course

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_lesson.sh  init_yocto.sh
lesson_0/: assignment.txt
lesson_0/assignment_solution/: CMakeLists.txt  hello_world.c
lesson_1/assignments/: Assignments
lesson_1/cmds/: class_cmds
lesson_1/code_examples/: CMakeLists.txt
lesson_1/code_examples/00_api_usage/: 00_api_usage.c
lesson_1/code_examples/01_abi_usage/: 01_abi_usage.c
lesson_1/code_examples/02_links/: original.txt
lesson_1/code_examples/03_files/: files.txt
lesson_1/toolchain/: get_toolchain.sh
lesson_10/code_examples/: CMakeLists.txt
lesson_10/code_examples/00_led/: 00_led.c
lesson_10/code_examples/01_pin_config/: 01_pin_config.c
lesson_10/code_examples/02_rng/: 02_rng.c
lesson_11/code_examples/: CMakeLists.txt
lesson_11/code_examples/00_mem_reg/: 00_mem_reg.c
lesson_11/code_examples/01_common_alloc_err/: 01_common_alloc_err.c
lesson_11/code_examples/02_mem_align/: 02_mem_align.c
lesson_11/code_examples/03_stack_based_alloc/: 03_stack_based_alloc.c
lesson_11/code_examples/04_mem_lock/: 04_mem_lock.c
lesson_12/code_examples/: CMakeLists.txt
lesson_12/code_examples/00_clk_src/: 00_clk_src.c
lesson_12/code_examples/01_timer_callback/: 01_timer_callback.c
lesson_2/assignments/: Assignments
lesson_2/code_examples/: CMakeLists.txt
lesson_2/code_examples/00_process_vs_thread/: process_vs_thread.c
lesson_2/code_examples/01_signals/: signals_catcher.c
lesson_2/code_examples/02_errors/: error_handlng.c
lesson_3/code_examples/: CMakeLists.txt  usage  who_lets_the_dogs_out
lesson_3/code_examples/00_open/: open.c
lesson_3/code_examples/01_write/: write.c
lesson_3/code_examples/02_read/: read.c
lesson_3/code_examples/03_fsync/: fsync.c
lesson_3/code_examples/04_fdatasync/: fdatasync.c
lesson_3/code_examples/05_sync/: sync.c
lesson_4/assignments/: assignments.txt
lesson_4/code_examples/: CMakeLists.txt
lesson_4/code_examples/00_EOF_and_beyond/: 00_EOF_and_beyond.c
lesson_4/code_examples/01_select/: select.c
lesson_4/code_examples/02_poll/: poll.c
lesson_4/code_examples/03_poll-vs-select/: poll-vs-select.c
lesson_5/assignments/: assignment.txt
lesson_5/code_examples/: 01_file_IO_relegating.c  CMakeLists.txt
lesson_5/code_examples/00_streams/: 00_streams  00_streams.c  in_the_air_tonight
lesson_5/code_examples/01_file_IO_relegating/: 01_multithreaded_relegated.c
lesson_5/code_examples/02_scatter_gather/: scatter_writes  scatter_writes.c
lesson_5/code_examples/03_epoll_multi_buffer_fds/: epoll_multi_buffer_fds.c
lesson_5/code_examples/04_eventfd/: 04_eventfd.c
lesson_6/code_examples/: CMakeLists.txt
lesson_6/code_examples/00_AIO/: AIO.c
lesson_6/code_examples/01_direct_IO/: direct_IO.c
lesson_6/code_examples/02_fork_term/: fork_term.c
lesson_6/u-boot/: cmds  fuch
lesson_6/u-boot/artifacts/: am335x-boneblack.dtb  u-boot-beaglebone-yocto-2022.01-r0.img  uEnv.txt  uImage.raw
lesson_7/: cmds
lesson_7/assignments/: assignment.txt
lesson_7/code_examples/: CMakeLists.txt
lesson_7/code_examples/00_proc_term/: 00_proc_term.c
lesson_7/code_examples/01_proc_wait/: 01_proc_wait.c
lesson_7/code_examples/02_zombies/: 02_zombies.c
lesson_7/code_examples/03_zombies_demo/: 03_zombies_demo.c
lesson_7/code_examples/04_deamon_example/: 04_deamon_example.c
lesson_7/code_examples/05_reparenting/: 05_reparenting.c
lesson_7/code_examples/06_data_collection_deamon/: 06_data_collection_deamon.c
lesson_8/code_examples/: CMakeLists.txt  cfs_cmds
lesson_8/code_examples/00_policies/: 00_get_policy.c
lesson_8/code_examples/01_set_policies/: 01_set_policy.c
lesson_9/assignments/: assignment.txt
lesson_9/code_examples/: CMakeLists.txt
tools/: create_tag.sh  get_cwd.c  usage.c
yocto_build/conf/: local.conf
(+29 files in other folders)
